--- a/search.htm
+++ b/search.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Purdue ECE Faculty Search</title>
+  <title>Purdue ECE Faculty Research Expertise Search</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
